Oppdaterer redigeringer.